[package]
name = "mbtc_api"
version = "0.1.0"
authors = ["Duilio Felix <duilio.silva@ztech.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }

hmac = "0.10.1"
sha2 = "0.9.3"

serde = { version = "1.0.123", features = ["derive"] }
serde_qs = "0.8.2"

